Update CSS content

--- a/assets/css/horario.css
+++ b/assets/css/horario.css
@@ -8,6 +8,12 @@ hr {
     color: gray;
 }
 
+table {
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+
 .dias {
     height: 80px;
 }
